// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchPage should render search field 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="search-books"
      >
        <div
          class="search-books-bar"
        >
          <a
            class="close-search"
            href="/"
          >
            Close
          </a>
          <div
            class="search-books-input-wrapper"
          >
            <input
              placeholder="Search by title or author"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="search-books-results"
        >
          <p>
            No search results to display
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="search-books"
    >
      <div
        class="search-books-bar"
      >
        <a
          class="close-search"
          href="/"
        >
          Close
        </a>
        <div
          class="search-books-input-wrapper"
        >
          <input
            placeholder="Search by title or author"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="search-books-results"
      >
        <p>
          No search results to display
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SearchPage should update component state when a text is input 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="search-books"
      >
        <div
          class="search-books-bar"
        >
          <a
            class="close-search"
            href="/"
          >
            Close
          </a>
          <div
            class="search-books-input-wrapper"
          >
            <input
              placeholder="Search by title or author"
              type="text"
              value="Lahiri"
            />
          </div>
        </div>
        <div
          class="search-books-results"
        >
          <ol
            class="books-grid"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="search-books"
    >
      <div
        class="search-books-bar"
      >
        <a
          class="close-search"
          href="/"
        >
          Close
        </a>
        <div
          class="search-books-input-wrapper"
        >
          <input
            placeholder="Search by title or author"
            type="text"
            value="Lahiri"
          />
        </div>
      </div>
      <div
        class="search-books-results"
      >
        <ol
          class="books-grid"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
